Add tag browser.

--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -20,6 +20,10 @@
             characters: @universe.characters,
             unique_id: "universe"
           } %>
+
+          <hr class="my-6" />
+
+          <%= render partial: "shared/tag_browser" %>
         </div>
       </div>
 
