--- a/app/views/character_tags/show.html.erb
+++ b/app/views/character_tags/show.html.erb
@@ -34,7 +34,7 @@
       <% end %>
 
       <div class="mt-16 pt-6 text-center">
-        <%= link_to "← Back to #{@character.name}", character_path(@character), class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-3 px-6 rounded-lg transition-colors duration-200 shadow-sm hover:shadow-md" %>
+        <%= link_to "← Back to #{@universe.name}", universe_path(@universe), class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-3 px-6 rounded-lg transition-colors duration-200 shadow-sm hover:shadow-md" %>
       </div>
     </div>
   </div>
