--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -9,8 +9,8 @@
         <div class="bg-white rounded-lg p-6 shadow-lg">
 
       <%# Favorite Image %>
-      <%= button_to universe_image_path(@image.universe, @image), method: :patch, params: { universe_id: @image.universe.id, image: { favorite: !@image.favorite } }, class: @image.favorite ? "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mb-4" : "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-4" do %>
-        <%= @image.favorite ? "Unfavorite" : "Favorite" %>
+      <%= button_to universe_image_path(@image.universe, @image), method: :patch, params: { universe_id: @image.universe.id, image: { favorite: !@favorited } }, class: @favorited ? "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mb-4" : "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-4" do %>
+        <%= @favorited ? "Unfavorite" : "Favorite" %>
       <% end %>
 
       <%# List Character Tags Associated with Image %>
