--- a/app/views/shared/_image_list.html.erb
+++ b/app/views/shared/_image_list.html.erb
@@ -2,7 +2,7 @@
 
   <% if images.empty? %>
     <%= render partial: "shared/empty_banner", locals: {
-      message: "There are no images yet, add some!"
+      message: (defined?(empty_message) && empty_message.present?) ? empty_message : "There are no images yet, add some!"
     } %>
   <% else %>
     <!-- Pagination at top -->
