--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -24,6 +24,14 @@
           <hr class="my-6" />
 
           <%= render partial: "shared/tag_browser" %>
+
+          <hr class="my-6" />
+
+          <%= render partial: "shared/filters", locals: {
+            universe: @universe,
+            images_filter: @images_filter,
+            untagged_images_count: @untagged_images_count
+          } %>
         </div>
       </div>
 
