Reuse partial for filters on character show.

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -65,6 +65,14 @@
               </div>
             <% end %>
           </div>
+
+          <hr class="my-6" />
+
+          <%= render partial: "shared/filters", locals: {
+            universe: @universe,
+            images_filter: nil,
+            untagged_images_count: @untagged_images_count
+          } %>
         </div>
       </div>
 
