--- a/app/views/devise/unlocks/images/edit.html.erb
+++ b/app/views/devise/unlocks/images/edit.html.erb
@@ -2,47 +2,50 @@
 
 <section class="images-edit-view">
 
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x">
-      <div class="small-12 medium-8 cell">
-        <%= link_to rails_blob_path(@image.image_file, disposition: "attachment")  do %>
+  <div class="max-w-6xl mx-auto px-4 py-8">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+      <div class="lg:col-span-2 bg-white rounded-lg p-4 shadow border border-gray-200 flex justify-center">
+        <%= link_to rails_blob_path(@image.image_file, disposition: "attachment") do %>
           <%= generate_image_tag(@image, [1000]) %>
         <% end %>
       </div>
 
-      <div class="small-12 medium-4 cell">
-        <ul>
+      <div class="bg-white rounded-lg p-6 shadow border border-gray-200">
+        <ul class="space-y-2">
           <% if @image.image_tags.empty? %>
             <li>There are no characters in this image.</li>
           <% else %>
-            <h3>This image contains...</h3>
+            <h3 class="text-lg font-semibold text-gray-900">This image contains...</h3>
             <% @image.image_tags.each do | tag | %>
-              <div class="buttongroup">
-                <%= link_to "#{tag.character.name}", character_url(tag.character), class: "button" %>
-                  <%= link_to image_tag_url(tag), method: "delete" do %>
-                    <button class="alert button">X</button>
-                  <% end %>
-              </div>
+              <li class="flex items-center justify-between gap-3">
+                <%= link_to "#{tag.character.name}", character_url(tag.character), class: "text-blue-600 hover:text-blue-800 hover:underline" %>
+                <%= link_to image_tag_url(tag), method: "delete", class: "text-red-600 hover:text-red-800", aria: { label: "Remove tag" } do %>
+                  ✕
+                <% end %>
+              </li>
             <% end %>
           <% end %>
         </ul>
 
         <% if @image.universe.characters.empty? %>
-          <ul>
+          <ul class="mt-4">
             <li>There are no characters in this universe to link to this image.</li>
           </ul>
         <% else %>
-          <h3>You could add...</h3>
-          <%= form_with model: ImageTag.new(), url: universe_image_image_tags_url(@image.universe, @image), method: "post" do |form| %>
-            <%= form.select :character_id, generate_character_names(@image.universe.characters, @image.image_tags), {include_blank: true}  %>
-            <%= form.submit "Add", class: "button" %>
+          <h3 class="text-lg font-semibold text-gray-900 mt-6">You could add...</h3>
+          <%= form_with model: ImageTag.new(), url: universe_image_image_tags_url(@image.universe, @image), method: "post", class: "mt-2 flex items-center gap-2" do |form| %>
+            <%= form.select :character_id, generate_character_names(@image.universe.characters, @image.image_tags), { include_blank: true }, class: "w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500" %>
+            <%= form.submit "Add", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
           <% end %>
         <% end %>
-        <%= form_with model: @image, url: universe_image_url(@image.universe, @image), method: "patch" do |form| %>
-          <%= form.label :caption, "Caption" %>
-          <%= form.text_field :caption %>
-          <%= form.submit "Update", class: "button" %>
-          <%= link_to "Delete", universe_image_url(@image), method: "delete", :data => {:confirm => "Are you sure?"}, class:"alert button" %>
+
+        <%= form_with model: @image, url: universe_image_url(@image.universe, @image), method: "patch", class: "mt-6 space-y-2" do |form| %>
+          <%= form.label :caption, "Caption", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :caption, class: "w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500" %>
+          <div class="flex items-center gap-2">
+            <%= form.submit "Update", class: "bg-gray-100 hover:bg-gray-200 text-gray-900 font-bold py-2 px-4 rounded border border-gray-200" %>
+            <%= link_to "Delete", universe_image_url(@image), method: "delete", data: { confirm: "Are you sure?" }, class: "bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded" %>
+          </div>
         <% end %>
       </div>
 
