--- a/app/views/shared/_empty_banner.html.erb
+++ b/app/views/shared/_empty_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="empty-banner">
-  <div class="col-md-10 mx-auto">
-    <ul class="list-group list-group-flush rounded">
-      <li class="list-group-item list-group-item-info"><%= message %></li>
-    </ul>
+  <div class="max-w-2xl mx-auto">
+    <div class="rounded-lg border border-gray-200 bg-gray-50 px-4 py-3 text-gray-700">
+      <%= message %>
+    </div>
   </div>
 </div>
