--- a/app/views/shared/_flashbar.html.erb
+++ b/app/views/shared/_flashbar.html.erb
@@ -1,5 +1,13 @@
 <% flash.each do |type, message| %>
-  <div class="flashbar <%= flash_class(type) %>">
+  <% variant =
+    case type.to_s
+    when "notice" then "border-blue-200 bg-blue-50 text-blue-900"
+    when "success" then "border-green-200 bg-green-50 text-green-900"
+    when "alert", "error" then "border-red-200 bg-red-50 text-red-900"
+    else "border-gray-200 bg-gray-50 text-gray-900"
+    end
+  %>
+  <div class="rounded-lg border px-4 py-3 my-3 mx-4 <%= variant %>">
     <%= message %>
   </div>
 <% end %>
