--- a/app/views/shared/_flashbar.html.erb
+++ b/app/views/shared/_flashbar.html.erb
@@ -7,7 +7,7 @@
     else "border-gray-200 bg-gray-50 text-gray-900"
     end
   %>
-  <div class="rounded-lg border px-4 py-3 my-3 mx-4 <%= variant %>">
+  <div class="rounded-lg border px-4 py-3 mt-3 shadow-sm pointer-events-auto <%= variant %>">
     <%= message %>
   </div>
 <% end %>
