--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,20 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="min-h-screen bg-gray-50 text-gray-900">
     <% if content_for?(:navbar) %>
       <%= yield(:navbar) %>
     <% else %>
       <%= render "shared/navbar" %>
     <% end %>
 
-    <main>
+    <main class="min-h-[calc(100vh-4rem)]">
       <%= yield%>
     </main>
-    <%= render "shared/flashbar" %>
+    <div class="fixed inset-x-0 bottom-0 pb-4 pointer-events-none">
+      <div class="max-w-5xl mx-auto px-4">
+        <%= render "shared/flashbar" %>
+      </div>
+    </div>
   </body>
 </html>
