--- a/app/views/shared/_empty_banner.html.erb
+++ b/app/views/shared/_empty_banner.html.erb
@@ -1,6 +1,6 @@
 <div class="empty-banner">
   <div class="max-w-2xl mx-auto">
-    <div class="rounded-lg border border-gray-200 bg-gray-50 px-4 py-3 text-gray-700">
+    <div class="rounded-lg border border-gray-200 bg-white px-4 py-3 text-gray-700 shadow-sm">
       <%= message %>
     </div>
   </div>
